--- a/templates/ejercicio1.html
+++ b/templates/ejercicio1.html
@@ -8,22 +8,22 @@
         <div class="card-body">
             <form method="POST" action="{{ url_for('ejercicio1') }}">
                 <div class="mb-3">
-                    <label for="nota1" class="form-label">Nota 1 (10-70):</label>
+                    <label for="nota1" class="form-label">Nota 1</label>
                     <input type="number" class="form-control" id="nota1" name="nota1" min="10" max="70" required>
                 </div>
                 
                 <div class="mb-3">
-                    <label for="nota2" class="form-label">Nota 2 (10-70):</label>
+                    <label for="nota2" class="form-label">Nota 2</label>
                     <input type="number" class="form-control" id="nota2" name="nota2" min="10" max="70" required>
                 </div>
                 
                 <div class="mb-3">
-                    <label for="nota3" class="form-label">Nota 3 (10-70):</label>
+                    <label for="nota3" class="form-label">Nota 3</label>
                     <input type="number" class="form-control" id="nota3" name="nota3" min="10" max="70" required>
                 </div>
                 
                 <div class="mb-3">
-                    <label for="asistencias" class="form-label">Asistencias (0-100%):</label>
+                    <label for="asistencias" class="form-label">Asistencias (%)</label>
                     <input type="number" class="form-control" id="asistencias" name="asistencias" min="0" max="100" required>
                 </div>
                 
