--- a/templates/ejercicio2.html
+++ b/templates/ejercicio2.html
@@ -1,8 +1,34 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="col-md-6">
-    <div class="form-group">
-        <h2>Ejercicio 2</h2>
+    <div class="card">
+        <div class="card-header">
+            <h2 class="card-title">Quien tiene el nombre mas largo</h2>
+        </div>
+        <div class="card-body">
+            <form action="{{ url_for('ejercicio2') }}" method="post">
+                <div class="mb-3">
+                    <label for="name1" class="form-label">Nombre 1:</label>
+                    <input type="text" class="form-control" id="name1" name="name1" required>
+                </div>
+                <div class="mb-3">
+                    <label for="name2" class="form-label">Nombre 2:</label>
+                    <input type="text" class="form-control" id="name2" name="name2" required>
+                </div>
+                <div class="mb-3">
+                    <label for="name3" class="form-label">Nombre 3:</label>
+                    <input type="text" class="form-control" id="name3" name="name3" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Enviar</button>
+            </form>
+        </div>
+        {% if resultado %}
+        <div class="card-footer mt-3">
+            <p>El nombre con mayor cantidad de caracteres es: {{ resultado }}</p>
+            <p>El nombre tiene {{ resultado|length }} caracteres.</p>
+        </div>
+        {% endif %}
+    </div>
     </div>
 </div>
 {% endblock %}
